[package]
name = "thaw_test-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7.0-gamma2", features = ["csr"] }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
thaw = { version = "0.4.0-beta3", features = ["csr"], git = "https://github.com/mageOfstructs/thaw" }
icondata = "0.4.0"

[workspace]
members = ["src-tauri"]
